Deploy travis script

--- a/examples/settings.gradle
+++ b/examples/settings.gradle
@@ -1,5 +1,25 @@
 
+pluginManagement {
+	repositories {
+		maven { url 'https://repo.spring.io/milestone' }
+		maven { url 'https://repo.spring.io/snapshot' }
+		gradlePluginPortal()
+	}
+	resolutionStrategy {
+		eachPlugin {
+			if (requested.id.id == 'org.springframework.boot') {
+				useModule("org.springframework.boot:spring-boot-gradle-plugin:${requested.version}")
+			}
+		}
+	}
+}
+
 include 'sample-app'
+include 'multi-project'
+include 'multi-project:components'
+include 'multi-project:resources-ng'
+include 'multi-project:resources-view'
+
 includeBuild '..'
 
 rootProject.name = 'angular-examples'
