--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,10 @@ cache:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
 
-script: ./gradlew clean build --refresh-dependencies --no-daemon --continue
+script: ./gradlew clean build --refresh-dependencies --stacktrace
+
+deploy:
+  provider: script,
+  script: ./gradlew publishPlugins -Pgradle.publish.key=$GRADLE_PUBLISH_KEY -Pgradle.publish.secret=$GRADLE_PUBLISH_SECRET
+  on:
+    branch: master
