--- a/build.gradle
+++ b/build.gradle
@@ -72,11 +72,11 @@ pluginBundle {
     description project.description
     tags = ['angular', 'node', 'nodejs']
 
-    mavenCoordinates {
-        groupId = project.group as String
-        artifactId = project.name
-        version = project.version as String
-    }
+//    mavenCoordinates {
+//        groupId = project.group as String
+//        artifactId = project.name
+//        version = project.version as String
+//    }
 }
 
 dependencies {
