--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,8 @@ cache:
 script: ./gradlew clean build --refresh-dependencies --stacktrace
 
 deploy:
-  provider: script,
+  provider: script
+  skip_cleanup: true
   script: ./gradlew publishPlugins -Pgradle.publish.key=$GRADLE_PUBLISH_KEY -Pgradle.publish.secret=$GRADLE_PUBLISH_SECRET
   on:
     branch: master
