Fix travis deploy

--- a/build.gradle
+++ b/build.gradle
@@ -99,8 +99,8 @@ uploadArchives {
     }
 }
 
-signing {
-    required { gradle.taskGraph.hasTask("uploadArchives") }
-    sign configurations.archives
-}
+//signing {
+//    required { gradle.taskGraph.hasTask("uploadArchives") }
+//    sign configurations.archives
+//}
 
