--- a/examples/sample-app/build.gradle
+++ b/examples/sample-app/build.gradle
@@ -5,11 +5,8 @@ plugins {
 
 angular {
 	group = '@sample'
-	nodeVersion = '12.12.0'
-	npmVersion = '6.12.0'
-	download = true
-	workDir = rootProject.file( '.gradle/nodejs' )
-	npmWorkDir = rootProject.file( '.gradle/npm' )
-	nodeModulesDir = projectDir
+	node {
+		download = true
+		workingDir = rootProject.file('.gradle/nodejs')
+	}
 }
-
