--- a/examples/multi-project/resources-view/build.gradle
+++ b/examples/multi-project/resources-view/build.gradle
@@ -20,8 +20,8 @@
  * SOFTWARE.
  */
 plugins {
-	id 'org.springframework.boot' version '2.2.2.BUILD-SNAPSHOT'
-	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
+	id 'org.springframework.boot' version '2.5.6'
+	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
 }
 
